<resources>
    <string name="app_name">Pocket-Doctor</string>
    <string name="title_activity_user_navigation">UserNavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="chat">Chat</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="request_analysis">Request analysis</string>
    <string name="list_of_analysis">List of analysis</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_message">Enter message</string>
    <string name="new_location">Location :</string>
    <string name="new_language">Language:</string>
    <string name="english">English</string>
    <string name="slovenian">Slovenian</string>
    <string name="update">Updated!</string>
    <string name="new_name">Name :</string>
    <string name="new_password">Password :</string>
    <string name="password_hint">New password</string>
    <string name="new_phone">Phone :</string>
    <string name="set_settings">Apply</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="medical_number">Medical Number</string>
    <string name="poc_doc_login">POC-DOC LOGIN</string>
    <string name="poc_doc_register">POC-DOC REGISTER</string>
    <string name="fullname">Fullname</string>
    <string name="phone">Phone</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="diagnosis">Diagnosis :</string>
    <string name="date">Date :</string>
    <string name="textview">TextView</string>
    <string name="doctor">Doctor :</string>
    <string name="description">Description :</string>
    <string name="therapy">Therapy</string>
    <string name="beats_per_minute">Beats per minute</string>
    <string name="oxygen_levels">Oxygen levels</string>
    <string name="_0">0</string>
    <string name="paired_devices">Paired devices</string>
    <string name="prediction">Prediction :</string>
    <string name="request">Request</string>
    <string name="device_name">Device name</string>
    <string name="subtitle">Subtitle</string>
    <string name="doctor_name">Doctor name</string>
    <string name="telephone">Telephone</string>
    <string name="hi_man_how_are_you">hi man, how are you?</string>
    <string name="hello_hello">hello, hello!</string>
    <string name="pending">Pending...</string>
    <string name="list">List</string>
    <string name="analysis">Analysis</string>
    <string name="doctor2">doctor</string>
    <string name="doctor4">Doctors</string>
    <string name="doctor3">DR. </string>
    <string name="sent">sent</string>
    <string name="error">ERROR!</string>
    <string name="messages_recevvv">MESSAGES RECVVV : </string>
    <string name="received">received</string>
    <string name="diagnosis2">Diagnosis</string>
    <string name="publicv">PUBLICV</string>
    <string name="no_diagnoses">No recorded diagnoses</string>
    <string name="therapies">Therapies</string>
    <string name="req_analysis">Request analysis</string>
    <string name="available_doctors">Available doctors</string>
    <string name="log_out">Log out</string>
    <string name="date_precition">Date of preditction : </string>
    <string name="are_you_sure">Are you sure you want to exit?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="pulse">Pulse measurement</string>
    <string name="no_doctors">No personal doctors!</string>
    <string name="measurement">measurement</string>
    <string name="device">device</string>
    <string name="connecting">Connecting...</string>
    <string name="connecting_failed">Connection failed. Try again.</string>
    <string name="connected">Connected</string>
    <string name="no_bluetooth">This device does not have a bluetooth adapter</string>
    <string name="access_denied">Access denied</string>
    <string name="paired">paired</string>
    <string name="no_bluetooth_found">No Paired Bluetooth Devices Found.</string>
    <string name="prediction1">prediction</string>
    <string name="cancelled">Cancelled</string>
    <string name="send_measurement">Send measurement</string>
    <string name="send_prediction">Send prediction</string>
    <string name="measurement_sent">Measurement sent</string>
    <string name="please_wait">Please wait...</string>
    <string name="req_failed">Request failed</string>
    <string name="no_therapies">No recorded therapies</string>
    <string name="all_fields">All fields are required</string>
    <string name="registration_complete">Registration complete</string>
    <string name="list_analysis">List analysis</string>
    <string name="active_therapies">Active therapies</string>
    <string name="diagnosis3">diagnosis</string>
    <string name="short_pass">Password is too short</string>
    <string name="pending2">Pending</string>
    <string name="_0_0">0.0</string>
    <string name="sentr_mssg">SENTR MSSG</string>
    <string name="measure">Measure</string>
</resources>