<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="feri.pora.pocket_doctor.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_f_request_analysis"
        android:name="feri.pora.pocket_doctor.fragments.RequestAnalysisFragment"
        android:label="@string/req_analysis"
        tools:layout="@layout/fragment_request_analysis" />

    <fragment
        android:id="@+id/nav_f_list_analysis"
        android:name="feri.pora.pocket_doctor.fragments.AnalysisFragment"
        android:label="@string/list_analysis"
        tools:layout="@layout/fragment_list_analysis" />

    <fragment
        android:id="@+id/nav_f_oxymeter"
        android:name="feri.pora.pocket_doctor.fragments.OxymeterFragment"
        android:label="@string/pulse"
        tools:layout="@layout/fragment_oxymeter" />

    <fragment
        android:id="@+id/nav_f_chat"
        android:name="feri.pora.pocket_doctor.fragments.ChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_f_act_therapies"
        android:name="feri.pora.pocket_doctor.fragments.TherapiesFragment"
        android:label="@string/active_therapies"
        tools:layout="@layout/fragment_therapies" />

    <fragment
        android:id="@+id/nav_f_measure_data"
        android:name="feri.pora.pocket_doctor.fragments.MeasureDataFragment"
        android:label="@string/pulse"
        tools:layout="@layout/fragment_measure_data" />

    <fragment
        android:id="@+id/nav_f_settings"
        android:name="feri.pora.pocket_doctor.fragments.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>