<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_medical_handbook"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_active_therapies"
            android:icon="@drawable/ic_therapy"
            android:title="Active therapies" />

        <item
            android:id="@+id/nav_request_analysis"
            android:icon="@drawable/ic_analytics"
            android:title="@string/request_analysis" />
        <item
            android:id="@+id/nav_list_analysis"
            android:icon="@drawable/ic_bar_chart"
            android:title="@string/list_of_analysis" />
        <item
            android:id="@+id/nav_oxymeter"
            android:icon="@drawable/ic_cardiology"
            android:title="Pulse measurement" />

        <item
            android:id="@+id/nav_doctors"
            android:icon="@drawable/ic_stethoscope"
            android:title="Doctors" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_exit_w"
            android:title="Log out" />
    </group>
</menu>