<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentDark"
    tools:context=".activities.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonClose"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_baseline_close_white"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25171" />

        <TextView
            android:id="@+id/userMedicalNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/poc_doc_register"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <EditText
            android:id="@+id/editTextFullName"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/userMedicalNumber"
            app:layout_constraintTop_toBottomOf="@+id/textViewFullname" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="84dp"
            android:layout_height="122dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:srcCompat="@drawable/ic_stethoscope" />

        <TextView
            android:id="@+id/textViewFullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/fullname"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/editTextFullName"
            app:layout_constraintTop_toBottomOf="@+id/userMedicalNumber" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.07" />

        <TextView
            android:id="@+id/textViewMedicalNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/medical_number"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/editTextMedicalNumber"
            app:layout_constraintTop_toBottomOf="@+id/editTextFullName" />

        <EditText
            android:id="@+id/editTextMedicalNumber"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/textViewMedicalNumber" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="phone"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/textViewPhone" />

        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/phone"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/editTextPhone"
            app:layout_constraintTop_toBottomOf="@+id/editTextMedicalNumber" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/transparent_button_style"
            android:shadowColor="#00FFFFFF"
            android:stateListAnimator="@null"
            android:text="@string/create_account"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>




